--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ dj-rest-auth==2.1.11
 Django==3.2.6
 django-allauth==0.45.0
 django-cors-headers==3.8.0
+django-storages==1.12.3
 djangorestframework==3.12.4
 djangorestframework-jwt==1.11.0
 Fabric3==1.14.post1
@@ -19,6 +20,7 @@ idna==3.3
 invoke==1.6.0
 jmespath==0.10.0
 mysqlclient==2.0.3
+numpy==1.21.6
 oauthlib==3.1.1
 paramiko==2.7.2
 pathlib2==2.3.6
@@ -26,6 +28,7 @@ Pillow==8.3.1
 pycparser==2.20
 PyJWT==1.7.1
 PyNaCl==1.4.0
+pyparsing==3.0.8
 python-dateutil==2.8.2
 python-dotenv==0.19.0
 python3-openid==3.2.0
@@ -33,6 +36,8 @@ pytz==2021.1
 requests==2.26.0
 requests-oauthlib==1.3.0
 s3transfer==0.5.0
+scipy==1.8.1
 six==1.16.0
+SoundFile==0.10.3.post1
 sqlparse==0.4.1
 urllib3==1.26.6
